--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
+/* Base Styling */
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family:'Questrial', sans-serif;
+  color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  padding: 5px;
+  max-width: 100%;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+  align-items: center;
 }
+
+.navbar a {
+  text-decoration: none;
+  padding: 5px;
+}
+
+.navbar a:hover {
+  color: darkgray;
+}
+
